--- a/tutorials.html
+++ b/tutorials.html
@@ -46,7 +46,7 @@
 <br><br><br><br><br><br>
         <!--------Footer--------->
         <section>
-            <p>Founded by JJarch<b> | </b>2022<b> | </b><u>minehut.xyz</u> | <b>minehut.xyz IS NOT AFFILIATED OR JOINED WITH MINEHUT IN ANY WAY</b></p>
+            <p>Founded by JJarch<b> | </b>2022<b> | </b><u>MHTutorials</u> | <b>WE ARE NOT AFFILIATED OR JOINED WITH MINEHUT IN ANY WAY</b></p>
         </section>
 
         <!---------JavaScript for Toggle Menu--------->
