--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <!--------Footer--------->
         <section>
-            <p>Founded by JJarch<b> | </b>2022<b> | </b><u>MHTutorials</u> | <b>WE NOT AFFILIATED OR JOINED WITH MINEHUT IN ANY WAY</b></p>
+            <p>Founded by JJarch<b> | </b>2022<b> | </b><u>MHTutorials</u> | <b>WE ARE NOT AFFILIATED OR JOINED WITH MINEHUT IN ANY WAY</b></p>
         </section>
 
         <!---------JavaScript for Toggle Menu--------->
