--- a/tutorials/resetpass.html
+++ b/tutorials/resetpass.html
@@ -54,7 +54,7 @@
             <p>Go ahead and click that nice sky blue button! It'll help y'all out a lot!</p>
             <h2>Step 4 - Type and set guys!</h2>
             <p>Power through and fill in your new password for your very own console.<br>Once you've done that, feel free to click the submit button to gain your new password. <b>Don't forget it!</b></p>
-
+            <img src="../images/passsubmit.png"><br>
             <h3>And that's how to reset your password on your Minehut Account!</h3>
             <a href="../tutorials.html" class="mh-btn">Back to tutorials</a>
         </section>
