--- a/tutorials/gamemodes.html
+++ b/tutorials/gamemodes.html
@@ -42,10 +42,10 @@
             <br><hr><br>
             <h2>There are actually multiple ways of changing your gamemode:</h2>
             <h3>Type 1 - Commands</h3>
-            <p>Open your chat and type <b>/gamemode creative | survival | adventure | spectator</b> --- Pick which gamemode you want!<br><img src="gm1.png"><br>You can also specify a player whom you want to change gamemode of:<br>Usage: <b>/gamemode creative | survival | adventure | spectator [player]</b><br><img src="gm2.png"><br>An example would be:<br><b>/gamemode creative JJarch_YT</b> or <b>/gamemode creative</b></p>
+            <p>Open your chat and type <b>/gamemode creative | survival | adventure | spectator</b> --- Pick which gamemode you want!<br><img src="../images/gm1.png"><br>You can also specify a player whom you want to change gamemode of:<br>Usage: <b>/gamemode creative | survival | adventure | spectator [player]</b><br><img src="../images/gm2.png"><br>An example would be:<br><b>/gamemode creative JJarch_YT</b> or <b>/gamemode creative</b></p>
             <h3>Type 2 - Keyboard Shortcuts --- <i>Gamemode Switcher</i></h3>
             <p>To quickly switch gamemodes on the go, you are able to use <b>F3 + F4</b> keybinds held at the same time to switch gamemodes.<br>Press <b>F4</b> to cycle between the gamemodes whilst holding <b>F3</b>. Make sure to hold <b>F3</b> though, otherwise it will all cancel!</p>
-            <img src="gmswitcher.png"><br>
+            <img src="../images/gmswitcher.png"><br>
             <a href="../tutorials.html" class="mh-btn">Back to tutorials</a>
         </section>
 
