--- a/tutorials.html
+++ b/tutorials.html
@@ -40,7 +40,7 @@
                 <li><a href="tutorials/appeal.html">Appeal a ban or mute on Minehut</a></li>
                 <li><a href="tutorials/bedrock.html">Join Minehut on Bedrock Edition</a></li>
                 <li><a href="tutorials/resetpass.html">Reset your Minehut account Password</a></li>
-
+                <li><a href="tutorials/gamemodes.html">Changing gamemodes: Creative, Survival, Spectator & Adventure</a></li>
             </ul>
         </section>
 <br><br><br><br><br><br>
