--- a/tutorials/gamemodes.html
+++ b/tutorials/gamemodes.html
@@ -26,7 +26,7 @@
 
 
             <div class="text-box">
-                <h1>How to change your Gamemode in your Minehut Server</h1>
+                <h1>How to change your/other's Gamemode</h1>
             </div>
         </section>
 
