--- a/tutorials.html
+++ b/tutorials.html
@@ -41,6 +41,7 @@
                 <li><a href="tutorials/bedrock.html">Join Minehut on Bedrock Edition</a></li>
                 <li><a href="tutorials/resetpass.html">Reset your Minehut account Password</a></li>
                 <li><a href="tutorials/gamemodes.html">Changing gamemodes: Creative, Survival, Spectator & Adventure</a></li>
+                <li><a href="tutorials/whitelist.html">Whitelisting on your Minehut Server</a></li>
             </ul>
         </section>
 <br><br><br><br><br><br>
