--- a/tutorials/bedrock.html
+++ b/tutorials/bedrock.html
@@ -43,7 +43,7 @@
             <h2>Straight to the point, what do I need to enter to join?</h2>
             <p>Minehut has it's very own form to submit an appeal, which you can use to appeal<br><b>NOTE: You may need to log in or create a Minehut account to appeal!</b></p>
             <br><br>
-            <img src="../images/bedrock.png"><br>
+            <img src="images/bedrock.png"><br>
             <h2>IP Address</h2>
             <p><b>bedrock.minehut.com</b></p>
             <h2>Port</h2>
