--- a/tutorials.html
+++ b/tutorials.html
@@ -42,6 +42,7 @@
                 <li><a href="tutorials/resetpass.html">Reset your Minehut account Password</a></li>
                 <li><a href="tutorials/gamemodes.html">Changing gamemodes: Creative, Survival, Spectator & Adventure</a></li>
                 <li><a href="tutorials/whitelist.html">Whitelisting on your Minehut Server</a></li>
+                <li><a href="tutorials/serverlag.html">Reduce server lag</a></li>
             </ul>
         </section>
 <br><br><br><br><br><br>
