--- a/tutorials/serverlag.html
+++ b/tutorials/serverlag.html
@@ -36,7 +36,7 @@
 
         <section class="whatwedo">
             <h2>There are multiple ways. Do all of them for the best riddance of lag!</h2>
-            <p>Uninstall all useless or not used plugins and skripts that might be taking up memory on your server.<br>Install the <b>clearlag</b> plugin to clear dropped items every 30 seconds/1 minute<br>Set a limit on how many players are able to be on the server at one time. A lot of players can overload a server!<br>Try to reduce the amount of packets being sent to the server by reducing the amount of boats!</p>
+            <p>Uninstall all useless or not used plugins and skripts that might be taking up memory on your server.<br>Install the <b>clearlag</b> plugin to clear dropped items every 30 seconds/1 minute<br>Set a limit on how many players are able to be on the server at one time. A lot of players can overload a server!<br>Try to reduce the amount of packets being sent to the server by reducing the amount of boats!<br>Make sure to restart your server <b>at least</b> <u>24 hours</u></p>
             <a href="../tutorials.html" class="mh-btn">Back to tutorials</a>
         </section>
 
