--- a/tutorials.html
+++ b/tutorials.html
@@ -10,6 +10,10 @@
         <script src="https://kit.fontawesome.com/29cd245c83.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div class="alert">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+            <h3>ALERT</h3><br>We have new tutorials!
+        </div>
         <section class="header">
             <nav>
                 <a href="index.html"><img src="images/logo.png"></a>
@@ -115,6 +119,29 @@ input[type=text]:focus {
 
 
 
+.alert {
+  padding: 20px;
+  background-color: #04AA6D; /* Green */
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s; /* 600ms to fade out */
+  margin-bottom: 15px;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
 
 
 
