--- a/tutorials.html
+++ b/tutorials.html
@@ -12,7 +12,7 @@
     <body>
         <div class="alert">
             <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
-            <h3>ALERT</h3><br>We have new tutorials!
+            <h3>ALERT</h3>We have new tutorials!
         </div>
         <section class="header">
             <nav>
@@ -120,12 +120,12 @@ input[type=text]:focus {
 
 
 .alert {
-  padding: 20px;
   background-color: #04AA6D; /* Green */
   color: white;
   opacity: 1;
   transition: opacity 0.6s; /* 600ms to fade out */
   margin-bottom: 15px;
+  text-align: center;
 }
 
 .closebtn {
