--- a/tutorials.html
+++ b/tutorials.html
@@ -44,6 +44,7 @@
                 <li><a href="tutorials/whitelist.html">Whitelisting on your Minehut Server</a></li>
                 <li><a href="tutorials/serverlag.html">Reduce server lag</a></li>
             </ul>
+            <div id="snackbar">Please note that tutorials are still in development!</div>
         </section>
 <br><br><br><br><br><br>
         <!--------Footer--------->
@@ -91,7 +92,33 @@
         }
       }
     }
-    </script>
+</script>
+<script>
+    function showSnackbar() {
+    // Get the snackbar DIV
+    var x = document.getElementById("snackbar");
+
+    // Add the "show" class to DIV
+    x.className = "show";
+
+    // After 3 seconds, remove the show class from DIV
+    setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+}
+</script>
+<script>
+    $(document).ready(function() {
+        window.onfocus = function() {
+        var fade_in = function() {
+            $(".quote").fadeIn();
+        }
+        setTimeout(fade_in, 2000);
+        var fade_out = function() {
+            $(".quote").fadeOut();
+        }
+        setTimeout(fade_out, 10000);
+    };
+});
+</script>
 <style>
     *{
     margin: 0;
@@ -100,7 +127,50 @@
 }
 
 
+#snackbar {
+  visibility: hidden; /* Hidden by default. Visible on click */
+  min-width: 250px; /* Set a default minimum width */
+  margin-left: -125px; /* Divide value of min-width by 2 */
+  background-color: #333; /* Black background color */
+  color: #fff; /* White text color */
+  text-align: center; /* Centered text */
+  border-radius: 2px; /* Rounded borders */
+  padding: 16px; /* Padding */
+  position: fixed; /* Sit on top of the screen */
+  z-index: 1; /* Add a z-index if needed */
+  left: 50%; /* Center the snackbar */
+  bottom: 30px; /* 30px from the bottom */
+}
 
+/* Show the snackbar when clicking on a button (class added with JavaScript) */
+#snackbar.show {
+  visibility: visible; /* Show the snackbar */
+  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+  However, delay the fade out process for 2.5 seconds */
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+/* Animations to fade the snackbar in and out */
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
 
 input[type=text] {
   width: 130px;
