--- a/tutorials.html
+++ b/tutorials.html
@@ -43,6 +43,7 @@
                 <li><a href="tutorials/gamemodes.html">Changing gamemodes: Creative, Survival, Spectator & Adventure</a></li>
                 <li><a href="tutorials/whitelist.html">Whitelisting on your Minehut Server</a></li>
                 <li><a href="tutorials/serverlag.html">Reduce server lag</a></li>
+                <li><a href="tutorials/installing-plugins.html">Installing Plugins</a></li>
             </ul>
             <div id="snackbar">Please note that tutorials are still in development!</div>
         </section>
