--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
        <meta name="viewport" content="with=device-width, initial-scale=1.0, user-scalable=0">
         <title>About MHTutorials</title>
-        <link rel="icon" type="image/x-icon" href="images/logo.png">
+        <link rel="icon" type="image/x-icon" href="images/newlogo.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet">
