--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
        <meta name="viewport" content="with=device-width, initial-scale=1.0, user-scalable=0">
         <title>About MHTutorials</title>
-        <link rel="icon" type="image/x-icon" href="images/newlogo.png">
+        <link rel="icon" type="image/x-icon" href="images/mhtutlogo.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;500&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
     <body>
         <section class="header">
             <nav>
-                <a href="index.html"><img src="images/logo.png"></a>
+                <a href="index.html"><img src="images/mhtutlogo.png"></a>
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
