--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://mhtutorials.github.io" />
         <meta property="og:image" content="images/mhtutlogo.png" />
-        <meta property="og:description" content="MHTutorials will help you on your way to become the best server-maker you can be!\nBring your experience down the race track and expand it to the full extent with this website." />
+        <meta property="og:description" content="MHTutorials will help you on your way to become the best server-maker you can be!&#x0A; Bring your experience down the race track and expand it to the full extent with this website." />
         <meta name="theme-color" content="#00FF00">
        <meta name="viewport" content="with=device-width, initial-scale=1.0, user-scalable=0, user-scalable=0">
         <title>MHTutorials</title>
